@@ -33,7 +33,7 @@
 
   <objectinfo class="wxColourPickerCtrl" icon="colourPickerIcon.xpm" type="widget">
         <inherits class="wxWindow"/>
-        <property name="name" type="text">m_wxColourPickerCtrl</property>
+        <property name="name" type="text">m_colourPicker</property>
         <property name="style" type="bitlist">
           <option name="wxCLRP_DEFAULT_STYLE" help="The default style: 0."/>
           <option name="wxCLRP_USE_TEXTCTRL" help="Creates a text control to the left of the picker button which is completely managed by the wxColourPickerCtrl and which can be used by the user to specify a colour. The text control is automatically synchronized with button's value. Use functions defined in wxPickerBase to modify the text control."/>
@@ -42,6 +42,23 @@
         </property>
         <property name="colour" type="wxColour"/>
         <event name="OnColourChanged" class="wxColourPickerEvent" help="The user changed the colour selected in the control either using the button or using text control (see wxCLRP_USE_TEXTCTRL; note that in this case the event is fired only if the user's input is valid, i.e. recognizable)."/>
+  </objectinfo>
+
+  <objectinfo class="wxFontPickerCtrl" icon="fontPickerIcon.xpm" type="widget">
+        <inherits class="wxWindow"/>
+        <property name="name" type="text">m_fontPicker</property>
+        <property name="style" type="bitlist">
+          <option name="wxFNTP_DEFAULT_STYLE" help="The default style: wxFNTP_FONTDESC_AS_LABEL | wxFNTP_USEFONT_FOR_LABEL."/>
+          <option name="wxFNTP_USE_TEXTCTRL" help="Creates a text control to the left of the picker button which is completely managed by the wxFontPickerCtrl and which can be used by the user to specify a font (see SetSelectedFont). The text control is automatically synchronized with button's value. Use functions defined in wxPickerBase to modify the text control."/>
+          <option name="wxFNTP_FONTDESC_AS_LABEL" help="Keeps the label of the button updated with the fontface name and the font size. E.g. choosing &quot;Times New Roman bold, italic with size 10&quot; from the fontdialog, will update the label (overwriting any previous label) with the &quot;Times New Roman, 10&quot; text."/>
+          <option name="wxFNTP_USEFONT_FOR_LABEL" help="Uses the currently selected font to draw the label of the button."/>
+          wxFNTP_DEFAULT_STYLE
+        </property>
+        <property name="value" type="wxFont"/>
+        <property name="max_point_size" type="uint" help="Sets the maximum point size value allowed for the user-chosen font. The default value is 100. Note that big fonts can require a lot of memory and CPU time both for creation and for rendering; thus, specially because the user has the option to specify the fontsize through a text control (see wxFNTP_USE_TEXTCTRL), it's a good idea to put a limit to the maximum font size when huge fonts do not make much sense.">
+			100
+		</property>
+        <event name="OnFontChanged" class="wxFontPickerEvent" help="The user changed the font selected in the control either using the button or using text control (see wxFNTP_USE_TEXTCTRL; note that in this case the event is fired only if the user's input is valid, i.e. recognizable)."/>
   </objectinfo>
 
   <objectinfo class="wxHtmlWindow" icon="htmlwin.xpm" type="widget">
