@@ -1,10 +1,11 @@
-﻿﻿﻿                     wxFormBuilder ChangeLog
+﻿﻿﻿﻿                     wxFormBuilder ChangeLog
 ************************************************************************
 date Version 3.00.36 (Beta 3)
 * Fixed FS#99 — "changes from menu editor remove all handlers."
 ^ Added a warning for unsupported properties.
 + Added style wxLC_NO_SORT_HEADER to wxListCtrl.
 + Added XRC support to wxFlatNotebook.
++ Added wxFontPickerCtrl.
 
 03-19-2007 Version 3.00.35 (Beta 3)
 + Added wxColourPickerCtrl using source provided by vaius.
